--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ html {
 }
 
 p {
-    font-size: 16px;
+    font-size: 18px;
     line-height: 1.5;
     color: gray;
 }
@@ -300,10 +300,15 @@ button:active {
     height: 400px;
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 .feat__wrapper {
     width: calc(100%/3);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     max-width: 400px;
     height: 200px;
 }
