--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ li {
 img {
     max-width: 100%;
     height: 40px;
-    margin: 26px;
+    margin-top: 64px;
 }
 
 a {
@@ -239,6 +239,7 @@ textarea {
 .row {
     width: 40%;
     max-width: 1200px;
+    height: 700px;
 }
 
 h1 {
@@ -254,7 +255,7 @@ h1 {
 }
 
 h2 {
-    font-size: 20px;
+    font-size: 22px;
     flex-wrap: wrap;
     margin: 16px;
 }
@@ -276,7 +277,7 @@ button:active {
 .btn {
     background-color: rgb(78, 14, 196);
     color: white;
-    padding: 10px 8px;
+    padding: 6px 8px;
     font-size: 20px;
     border-radius: 48px;
     border: none;
@@ -373,6 +374,7 @@ button:active {
 }
 
 .quality__row {
+    width: 95%;
     display: flex;
     flex-direction: column;
 }
@@ -381,12 +383,13 @@ button:active {
     width: 160%;
     max-width: 900px;
     margin:  0 auto;
+    flex-wrap: wrap;
 }
 
 .quality__img {
     width: 100%;
-    max-width: 600px;
-    height: 600px;
+    max-width: 700px;
+    height: 700px;
 }
 
 .hero {
@@ -415,8 +418,8 @@ button:active {
 .steps__container {
     padding: 64px 0;
     width: 100%;
-    max-width: 1080px;
-    margin: 0 180px 0 180px;
+    max-width: 1180px;
+    margin: 0 auto;
 }
 
 .steps__row {
@@ -544,6 +547,7 @@ button:active {
     padding: 24px 0;
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .p__row {
@@ -680,6 +684,7 @@ button:active {
 .link {
     border: 1px solid white;
     background-color: white;
+    cursor: pointer;
     border-radius: 16px;
     width: 28px;
     height: 28px;
@@ -701,25 +706,37 @@ button:active {
 /* SMALL PHONE, TABLET, LARGE SMARTPHONES */
 
 @media (max-width: 768px) {
-    .header__description {
+    .header__container {
         padding: 0 24px;
+        margin: 0%;
+        display: flex;
+        flex-wrap: wrap;
     }
 
     h1 {
-        font-size: 40px;
+        font-size: 22px;
     }
 
     h2 {
-        font-size: 26px;
+        font-size: 16px;
     }
 
     button {
-        font-size: 18px;
+        font-size: 8px;
     }
 
-    .features {
+    .footer {
         width: 50%;
+        display: flex;
+        justify-content: space-around;
     }
+
+    .body {
+        width: 50%;
+        display: flex;
+        justify-content: space-around;
+    }
+
 }
 
 /* SMALL PHONES, LARGE SMARTPHONES */
@@ -733,11 +750,11 @@ button:active {
         display: block;
     }
 
-    .features {
+    main {
         width: 100%;
     }
     
-    .features:not(:last-child) {
+    main:not(:last-child) {
         margin-bottom: 24px;
     }
 }
