--- a/style.css
+++ b/style.css
@@ -323,26 +323,22 @@ button:active {
     padding: 0 150px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
     justify-content: space-between;
 }
 
 .feat__wrapper {
     width: calc(100%/3);
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
-    max-width: 400px;
-    height: 200px;
+    padding: 16px 16px;
 }
 
 .feat__img {
     border: 1px solid gray;
     color: rgb(78, 14, 196);
-    width: 25%;
-    width: 60px;
-    height: 60px;
+    width: 180px;
+    height: 70px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -351,14 +347,9 @@ button:active {
 }
 
 .feat__subtitle {
-    text-align: center;
-    margin-bottom: 24px;
-    width: 80%;
+    margin-left: 24px;
 }
 
-.highlight__para {
-    align-items: center;
-}
 
 /* QUALITY */
 
@@ -384,6 +375,10 @@ button:active {
     max-width: 900px;
     margin:  0 auto;
     flex-wrap: wrap;
+}
+
+.quality__des {
+    margin-bottom: 32px;
 }
 
 .hero {
@@ -413,8 +408,13 @@ button:active {
     display: flex;
 }
 
+.steps__img {
+    display: flex;
+    align-items: center;
+}
+
 .steps__row {
-    padding: 0 8px;
+    padding: 0 12px;
 }
 
 .lapt {
@@ -451,15 +451,14 @@ button:active {
 .val__container {
     padding: 64px 0;
     width: 50%;
+    display: flex;
 }
 
 .val__row {
-    display: flex;
     margin-top: 24px;
 }
 
 .text {
-    text-align: left;
 }
 
 .val__text {
@@ -467,7 +466,7 @@ button:active {
 }
 
 .principle {
-    display: flex;
+    
 }
 
 .val__img {
@@ -740,13 +739,9 @@ button:active {
     }
 
     .service__list {
-        flex-direction: column;
+        flex-direction: row;
         padding: 0 12px;
         align-items: center;
-    }
-
-    #values {
-        
     }
 
     .val__container {
@@ -823,6 +818,7 @@ button:active {
     .feat__container {
         width: 50%;
         text-align: center;
+        flex-direction: column;
     }
 
     #values {
