--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@ p {
     font-size: 18px;
     line-height: 1.5;
     color: gray;
+    padding-top: 8px;
 }
 
 .frame {
@@ -251,12 +252,12 @@ h1 {
 }
 
 h2 {
-    font-size: 24px;
+    font-size: 26px;
     line-height: 1.5;
 }
 
 h3 {
-    font-size: 18px;
+    font-size: 20px;
     line-height: 1.5;
 }
 
@@ -450,23 +451,21 @@ button:active {
 
 .val__container {
     padding: 64px 0;
-    width: 50%;
+    width: 100%;
     display: flex;
 }
 
 .val__row {
-    margin-top: 24px;
+    margin: 24px 0 24px 0;
+    display: flex;
 }
 
-.text {
-}
-
-.val__text {
-    padding: 32px 0;
+.val__rows {
+    margin-right: 20px;
 }
 
 .principle {
-    
+    display: flex;
 }
 
 .val__img {
@@ -494,8 +493,7 @@ button:active {
 }
 
 .val__subtitle {
-    margin: 0 16px 0 16px;
-    font-weight: bold;
+    margin: 0 20px 0 20px;
 }
 
 .pro__img {
