--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=SUSE:wght@100..800&display=swap');
 
 * {
-    padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: SUSE, sans-serif;
+    font-family: ROBOTO, sans-serif;
 }
 
 html {
@@ -235,7 +234,7 @@ textarea {
 }
 
 .row {
-    width: 40%;
+    width: 50%;
     max-width: 1200px;
 }
 
@@ -246,7 +245,6 @@ h1 {
 }
 
 .header__des {
-   max-width: 400px;
    text-align: start;
    padding: 24px 0;
 }
@@ -297,41 +295,35 @@ button:active {
 /* Features */
 
 #features {
-    height: calc(100vh- 80px);
-    padding: 96px 0;
+    padding: 80px 0;
 }
 
 .title {
-    padding: 32px 0;
+    padding: 28px 0;
     color: rgb(78, 14, 196);
-}
-
-.feat__row {
-    width: 60%;
-    max-width: 1200px;
-    margin: 0 auto;
-    text-align: center;
 }
 
 .feat__container {
     padding: 96px 0;
+    text-align: center;
+}
+
+.feat__row {
     width: 100%;
-    max-width: 1280px;
     margin: 0 auto;
+    max-width: 1200px;
 }
 
 .service__list {
-    padding: 100px;
+    text-align: left;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
 }
 
 .feat__wrapper {
     width: calc(100%/3);
     display: flex;
     justify-content: center;
-    align-items: center;
     padding: 16px 16px;
 }
 
@@ -349,6 +341,8 @@ button:active {
 
 .feat__subtitle {
     margin-left: 24px;
+    display: flex;
+    flex-direction: column;
 }
 
 
@@ -416,6 +410,7 @@ button:active {
 }
 
 .steps__img {
+    width: 100%;
     display: flex;
     align-items: center;
 }
@@ -425,15 +420,15 @@ button:active {
 }
 
 .lapt {
-    max-width: 550px;
+    max-width: 650px;
     height: 360px;
 }
 .steps__title {
-    padding: 16px 0;
+    padding: 14px 0;
 }
 
 .steps__list {
-    width: 100%;
+    width: 90%;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -453,15 +448,18 @@ button:active {
 /*values */
 
 #values {
-    padding: 32px 0;
-    max-width: 1180px;
+    padding: 40px 0;
+    max-width: 1280px;
     margin: 0 auto;
 }
 
 .val__container {
     padding: 64px 0;
-    width: 100%;
     display: flex;
+}
+
+.valo {
+    width: 90%;
 }
 
 .val__row {
@@ -510,8 +508,8 @@ button:active {
 }
 
 .pro__img {
-    max-width: 500px;
-    height: 400px;
+    max-width: 700px;
+    height: 600px;
 }
 
 /* PRICING */
@@ -523,8 +521,9 @@ button:active {
 .p__container {
     width: 100%;
     max-width: 1280px;
-    margin: 0 180px 0 180px;
+    margin: 0 auto;
     padding: 64px 0;
+    flex-direction: column;
 }
 
 .p__title {
@@ -539,18 +538,18 @@ button:active {
 }
 
 .p__row {
-    border: 1px solid gray;
-    width: 30%;
+    border: 1px solid rgba(128, 128, 128, 0.842);
+    width: 32%;
     border-radius: 4px;
     margin-bottom: 24px;
 }
 
 .p__row--two {
-    border: 1px solid gray;
-    width: 30%;
+    border: 1px solid rgba(128, 128, 128, 0.842);
+    width: 32%;
     border-radius: 4px;
     height: 510px;
-    background-color: rgba(72, 24, 247, 0.795);
+    background-color: rgba(60, 20, 236, 0.781);
     margin-bottom: 24px;
 }
 
@@ -562,7 +561,7 @@ button:active {
 .companies {
     padding: 16px 0;
     text-align: center;
-    border: 1px solid gray;
+    border: 1px solid rgba(128, 128, 128, 0.842);
     border-radius: 3px;
 }
 
@@ -636,15 +635,11 @@ button:active {
 
 /* TEST */
 
-#testimonal {
-    padding: 96px 0;
-}
-
 .test__container {
     width: 100%;
-    max-width: 1280px;
-    margin: 0 180px 0 180px;
-    padding: 64px 0;
+    
+    margin: 0 auto;
+    padding: 96px 0;
     display: flex;
     justify-content: space-between;
 }
@@ -664,7 +659,7 @@ button:active {
 }
 
 .ratings{
-    margin-bottom: 8px;
+    margin-top: 36px;
     color: gold;
 }
 
@@ -756,6 +751,15 @@ button:active {
     .nav__links {
         width: 100%;
     }
+    
+    .valo{
+        width: 60%;
+    }
+
+    .pro__img {
+        width: 100%;
+        flex-direction: column-reverse;
+    }
 }
 
 @media (max-width: 768px) {
@@ -808,9 +812,8 @@ button:active {
         padding: 12px 24px;
     }
 
-    .service__list {
-        flex-direction: row;
-        padding: 0 12px;
+    .service__list{
+        flex-direction: column;
         align-items: center;
     }
 
@@ -857,11 +860,11 @@ button:active {
     }
 
     .test__img {
-        width: 60%;
+        width: 100%;
     }
 
     .test__row {
-        width: 60%;
+        width: 100%;
     }
 
 
@@ -907,8 +910,15 @@ button:active {
     }
     
     .feat__container {
-        width: 50%;
         text-align: center;
+    }
+
+    .service__list {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .feat__wrapper {
         flex-direction: column;
     }
 
