--- a/style.css
+++ b/style.css
@@ -118,16 +118,6 @@ a:hover {
     height: 50px;
 }
 
-.email__btn {
-    border: 1px solid black;
-    border-radius: 64px;
-    max-width: 420px;
-    height: 65px;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: end;
-}
-
 .btn__menu {
     background-color: transparent;
     font-size: 32px;
@@ -200,10 +190,6 @@ a:hover {
     background-color: rgb(226, 232, 240);
 }
 
-header {
-    height: calc(100vh- 80px);
-}
-
 .header__container {
     padding: 64px 0;
     width: 100%;
@@ -222,13 +208,6 @@ header {
     height: 500px;
 }
 
-textarea {
-    max-width: 240px;
-    height: 40px;
-    border: none;
-    color: lightgrey;
-}
-
 .row {
     width: 50%;
     max-width: 1200px;
@@ -241,7 +220,6 @@ h1 {
 }
 
 .header__des {
-   text-align: start;
    padding: 24px 0;
 }
 
@@ -275,13 +253,29 @@ button:active {
     font-size: 20px;
     border-radius: 48px;
     border: none;
-    margin-bottom: 12px;
 }
 
 .email {
-    font-size: 16px;
-    padding: 12px 12px;
-    margin: 18px;
+    border: 1px solid black;
+    border-radius: 28px;
+    width: 450px;
+    height: 60px;
+}
+
+.input {
+    border: none;
+    width: 70%;
+    height: 48px;
+    margin: 5px 0 0 10px;
+}
+
+.input:focus {
+    outline: none;
+}
+
+.input__wrapper {
+    display: flex;
+    width: 100%;
 }
 
 .trust {
@@ -314,18 +308,18 @@ button:active {
     text-align: left;
     display: flex;
     flex-wrap: wrap;
+    gap: 50px;
 }
 
 .feat__wrapper {
-    width: calc(100%/3);
     display: flex;
-    padding: 16px 16px;
+    flex: 1 1 30%;
 }
 
 .feat__img {
     border: 1px solid gray;
     color: rgb(78, 14, 196);
-    width: 150px;
+    width: 130px;
     height: 70px;
     display: flex;
     align-items: center;
@@ -543,7 +537,6 @@ button:active {
     border: 1px solid rgba(128, 128, 128, 0.842);
     width: 32%;
     border-radius: 4px;
-    height: 510px;
     background-color: rgba(60, 20, 236, 0.781);
     margin-bottom: 24px;
 }
@@ -632,11 +625,9 @@ button:active {
 
 .test__container {
     width: 100%;
-    
     margin: 0 auto;
     padding: 96px 0;
     display: flex;
-    justify-content: space-between;
 }
 
 .test__img {
@@ -669,6 +660,11 @@ button:active {
 .last__rows {
     display: flex;
     justify-content: space-around;
+    margin-bottom: 32px;
+}
+
+.last__row {
+    width: 30%;
 }
 
 .footer__title{
@@ -685,7 +681,6 @@ button:active {
 .footer__list{
     color: white;
     cursor: pointer;
-    flex-direction: column;
     line-height: 24px;
 }
 
@@ -715,12 +710,21 @@ button:active {
     margin: 16px 16px;
 }
 
+.logo__title--bottom {
+    color: white;
+    font-size: 24px;
+    font-weight: bolder;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .copyright {
     color: rgb(187, 183, 183);
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 150px;
+    padding-top: 32px;
 }
 
 
@@ -792,11 +796,11 @@ button:active {
     }
 
     h1 {
-        font-size: 24px;
+        font-size: 28px;
     }
 
     h2 {
-        font-size: 17px;
+        font-size: 18px;
     }
 
     h3 {
@@ -821,13 +825,21 @@ button:active {
 
     .feat__container {
         flex-direction: column;
-        padding: 12px 24px;
     }
 
     .service__list{
+        flex-wrap: nowrap;
         flex-direction: column;
         align-items: center;
-        flex-wrap: wrap;
+    }
+
+    .feat__wrapper {
+        flex-direction: row;
+        width: 50%;
+    }
+    
+    .feat__img {
+        width: 50%;
     }
 
     .val__container {
@@ -838,11 +850,13 @@ button:active {
 
     .val__row {
         flex-direction: column;
+        width: 100%;
     }
 
     .val__rows {
         flex-direction: column;
         align-items: center;
+        margin-bottom: 16px;
     }
 
     .principle {
@@ -861,7 +875,7 @@ button:active {
     }
 
     .val__pic {
-        width: 60%;
+        width: 100%;
     }
 
     .quality__container {
@@ -877,6 +891,10 @@ button:active {
     .steps__container {
         flex-direction: column;
         align-items: center;
+    }
+
+    .steps__list {
+        text-align: center;
     }
 
     .steps__num {
@@ -896,7 +914,6 @@ button:active {
     .test__row {
         width: 100%;
     }
-
 
 }
 
@@ -940,28 +957,52 @@ button:active {
     }
     
     .feat__container {
-        text-align: center;
-    }
-
-    .service__list {
         flex-direction: column;
-        align-items: center;
     }
 
     .feat__wrapper {
         flex-direction: column;
+        align-items: center;
+    }
+
+    .feat__img {
+        width: 30%;
+    }
+
+    .feat__subtitle {
+        text-align: center;
     }
 
     #values {
-        width: 50%;
+        flex-direction: column;
+    }
+
+    .val__container {
+        width: 100%;
     }
 
     .p__container {
         flex-direction: column;
     }
 
+    .btn1 {
+        padding: 6px 12px;
+    }
+
+    .btn2 {
+        padding: 6px 12px;
+    }
+
+    .btn3 {
+        padding: 6px 12px;
+    }
+
     footer {
-        padding: 48px 24px;
+        flex-direction: column;
+    }
+
+    .last__rows {
+        flex-wrap: wrap;
     }
 
     .footer__list {
