--- a/style.css
+++ b/style.css
@@ -249,7 +249,8 @@ button:active {
 .btn {
     background-color: rgb(78, 14, 196);
     color: white;
-    padding: 6px 8px;
+    height: 48px;
+    margin-top: 4px;
     font-size: 20px;
     border-radius: 48px;
     border: none;
@@ -258,7 +259,7 @@ button:active {
 .email {
     border: 1px solid black;
     border-radius: 28px;
-    width: 450px;
+    width: 440px;
     height: 60px;
 }
 
@@ -954,6 +955,22 @@ button:active {
 
     .nav__container {
         width: 25%;
+    }
+
+    .email {
+        width: 280px;
+        margin-bottom: 52px;
+    }
+    
+    .input__wrapper {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .btn {
+        width: 280px;
+        font-size:18px;
+        margin-top: 8px;
     }
     
     .feat__container {
